[package]
name = "pingu"
version = "0.1.0"
authors = ["Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.4.0", features = ["all"] }
libc = "0.2.97"
pnet = "0.28.0"
anyhow = "1.0.41"
pretty-hex = "0.2.1"
pnet_sys = "0.28.0"
byteorder = "1.4.3"
structopt = "0.3"